SWAPL/lib/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> headers b_bodies
Rule 2     program -> headers
Rule 3     headers -> header
Rule 4     headers -> header headers
Rule 5     header -> agent_model
Rule 6     header -> role_set
Rule 7     header -> agent_set
Rule 8     header -> agent_attr_set
Rule 9     header -> environment_def
Rule 10    header -> assign SEMICOLON
Rule 11    header -> IMPORT STRING SEMICOLON
Rule 12    agent_model -> MODEL STRING SEMICOLON
Rule 13    role_set -> ROLESET LPAREN role_set_statement RPAREN SEMICOLON
Rule 14    role_set_statement -> role_set_statement COMMA role_def
Rule 15    role_set_statement -> role_def
Rule 16    role_def -> BEGIN nameval_pairs END
Rule 17    agent_set -> AGENTSET LPAREN role_set_statement RPAREN SEMICOLON
Rule 18    agent_attr_set -> AGENTATTRSET literal_list_set_statement SEMICOLON
Rule 19    environment_def -> ENVIRONMENT LPAREN role_def RPAREN SEMICOLON
Rule 20    literal_list_set_statement -> LPAREN literal_list RPAREN
Rule 21    literal_list -> NAME COMMA literal_list
Rule 22    literal_list -> NAME
Rule 23    b_bodies -> b_bodies b_body
Rule 24    b_bodies -> b_body
Rule 25    b_body -> behaviour_def
Rule 26    b_body -> function_def
Rule 27    behaviour_def -> BEHAVIOUR NAME BEGIN with_list END
Rule 28    function_def -> FUNCTION NAME LPAREN names_list RPAREN BEGIN statements END
Rule 29    function_def -> FUNCTION LPAREN names_list RPAREN BEGIN statements END
Rule 30    names_list -> NAME COMMA names_list
Rule 31    names_list -> NAME
Rule 32    assign -> VAR NAME EQUAL expr
Rule 33    assign -> NAME EQUAL expr
Rule 34    assign -> VAR NAME
Rule 35    assign -> NAME DOT NAME EQUAL expr
Rule 36    assign -> increment
Rule 37    with_list -> with_list with_block
Rule 38    with_list -> with_block
Rule 39    with_block -> WITH with_set BEGIN statements END
Rule 40    with_block -> WITH with_set BEGIN statements END PIPE
Rule 41    with_set -> with_set DOT with_set
Rule 42    with_set -> ALL
Rule 43    with_set -> ONE
Rule 44    with_set -> ROLES LPAREN string_list RPAREN
Rule 45    with_set -> BUT LPAREN expr RPAREN
Rule 46    with_set -> MINIMUM LPAREN function_def RPAREN
Rule 47    with_set -> FILTER LPAREN function_def RPAREN
Rule 48    string_list -> STRING
Rule 49    string_list -> string_list COMMA STRING
Rule 50    statements -> statements statement
Rule 51    statements -> statement
Rule 52    statement -> assign SEMICOLON
Rule 53    statement -> proccall
Rule 54    statement -> methcall
Rule 55    statement -> returnstmt
Rule 56    statement -> if_block
Rule 57    statement -> for_block
Rule 58    statement -> while_block
Rule 59    proccall -> NAME list_set_statement SEMICOLON
Rule 60    methcall -> NAME DOT NAME list_set_statement SEMICOLON
Rule 61    returnstmt -> RETURN expr SEMICOLON
Rule 62    if_block -> IF LPAREN expr RPAREN then_else_statement
Rule 63    if_block -> IF LPAREN expr RPAREN then_else_statement ELSE then_else_statement
Rule 64    then_else_statement -> statement
Rule 65    then_else_statement -> BEGIN statements END
Rule 66    while_block -> WHILE LPAREN expr RPAREN then_else_statement
Rule 67    for_block -> FOR LPAREN assign SEMICOLON expr SEMICOLON assign RPAREN then_else_statement
Rule 68    increment -> PLUS PLUS NAME
Rule 69    increment -> NAME PLUS PLUS
Rule 70    expr -> INSTANCE NAME
Rule 71    expr -> MINUS expr
Rule 72    expr -> expr PLUS expr
Rule 73    expr -> expr MINUS expr
Rule 74    expr -> expr TIMES expr
Rule 75    expr -> expr DIVIDE expr
Rule 76    expr -> expr EEQUAL expr
Rule 77    expr -> expr NEQUAL expr
Rule 78    expr -> expr LT expr
Rule 79    expr -> expr GT expr
Rule 80    expr -> LPAREN expr RPAREN
Rule 81    expr -> SET list_set_statement
Rule 82    expr -> LIST list_set_statement
Rule 83    list_set_statement -> LPAREN RPAREN
Rule 84    list_set_statement -> LPAREN set_expr_list RPAREN
Rule 85    set_expr_list -> expr COMMA set_expr_list
Rule 86    set_expr_list -> expr
Rule 87    expr -> BEGIN nameval_pairs END
Rule 88    nameval_pairs -> nameval_pairs COMMA nameval_pair
Rule 89    nameval_pairs -> nameval_pair
Rule 90    nameval_pair -> NAME COLON expr
Rule 91    expr -> PYTHONLINK STRING
Rule 92    expr -> NAME DOT with_set
Rule 93    expr -> NAME DOT NAME
Rule 94    expr -> NAME list_set_statement
Rule 95    expr -> NAME DOT NAME list_set_statement
Rule 96    expr -> with_set
Rule 97    expr -> NAME SUBL expr SUBR
Rule 98    expr -> NAME
Rule 99    expr -> NUMBER
Rule 100   expr -> STRING
Rule 101   expr -> function_def
Rule 102   expr -> nONE
Rule 103   expr -> NONE
Rule 104   expr -> nULL
Rule 105   expr -> NULL
Rule 106   expr -> TRUE
Rule 107   expr -> FALSE

Terminals, with rules where they appear

AGENTATTRSET         : 18
AGENTSET             : 17
ALL                  : 42
BEGIN                : 16 27 28 29 39 40 65 87
BEHAVIOUR            : 27
BUT                  : 45
COLON                : 90
COMMA                : 14 21 30 49 85 88
DIVIDE               : 75
DOT                  : 35 41 60 92 93 95
EEQUAL               : 76
ELSE                 : 63
END                  : 16 27 28 29 39 40 65 87
ENVIRONMENT          : 19
EQUAL                : 32 33 35
FALSE                : 107
FILTER               : 47
FOR                  : 67
FUNCTION             : 28 29
GT                   : 79
IF                   : 62 63
IMPORT               : 11
INSTANCE             : 70
LIST                 : 82
LPAREN               : 13 17 19 20 28 29 44 45 46 47 62 63 66 67 80 83 84
LT                   : 78
MINIMUM              : 46
MINUS                : 71 73
MODEL                : 12
NAME                 : 21 22 27 28 30 31 32 33 34 35 35 59 60 60 68 69 70 90 92 93 93 94 95 95 97 98
NEQUAL               : 77
NONE                 : 103
NULL                 : 105
NUMBER               : 99
ONE                  : 43
PIPE                 : 40
PLUS                 : 68 68 69 69 72
PYTHONLINK           : 91
RETURN               : 61
ROLES                : 44
ROLESET              : 13
RPAREN               : 13 17 19 20 28 29 44 45 46 47 62 63 66 67 80 83 84
SEMICOLON            : 10 11 12 13 17 18 19 52 59 60 61 67 67
SET                  : 81
STRING               : 11 12 48 49 91 100
SUBL                 : 97
SUBR                 : 97
TIMES                : 74
TRUE                 : 106
VAR                  : 32 34
WHILE                : 66
WITH                 : 39 40
error                : 
nONE                 : 102
nULL                 : 104

Nonterminals, with rules where they appear

agent_attr_set       : 8
agent_model          : 5
agent_set            : 7
assign               : 10 52 67 67
b_bodies             : 1 23
b_body               : 23 24
behaviour_def        : 25
environment_def      : 9
expr                 : 32 33 35 45 61 62 63 66 67 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78 79 79 80 85 86 90 97
for_block            : 57
function_def         : 26 46 47 101
header               : 3 4
headers              : 1 2 4
if_block             : 56
increment            : 36
list_set_statement   : 59 60 81 82 94 95
literal_list         : 20 21
literal_list_set_statement : 18
methcall             : 54
names_list           : 28 29 30
nameval_pair         : 88 89
nameval_pairs        : 16 87 88
proccall             : 53
program              : 0
returnstmt           : 55
role_def             : 14 15 19
role_set             : 6
role_set_statement   : 13 14 17
set_expr_list        : 84 85
statement            : 50 51 64
statements           : 28 29 39 40 50 65
string_list          : 44 49
then_else_statement  : 62 63 63 66 67
while_block          : 58
with_block           : 37 38
with_list            : 27 37
with_set             : 39 40 41 41 92 96

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . headers b_bodies
    (2) program -> . headers
    (3) headers -> . header
    (4) headers -> . header headers
    (5) header -> . agent_model
    (6) header -> . role_set
    (7) header -> . agent_set
    (8) header -> . agent_attr_set
    (9) header -> . environment_def
    (10) header -> . assign SEMICOLON
    (11) header -> . IMPORT STRING SEMICOLON
    (12) agent_model -> . MODEL STRING SEMICOLON
    (13) role_set -> . ROLESET LPAREN role_set_statement RPAREN SEMICOLON
    (17) agent_set -> . AGENTSET LPAREN role_set_statement RPAREN SEMICOLON
    (18) agent_attr_set -> . AGENTATTRSET literal_list_set_statement SEMICOLON
    (19) environment_def -> . ENVIRONMENT LPAREN role_def RPAREN SEMICOLON
    (32) assign -> . VAR NAME EQUAL expr
    (33) assign -> . NAME EQUAL expr
    (34) assign -> . VAR NAME
    (35) assign -> . NAME DOT NAME EQUAL expr
    (36) assign -> . increment
    (68) increment -> . PLUS PLUS NAME
    (69) increment -> . NAME PLUS PLUS

    IMPORT          shift and go to state 10
    MODEL           shift and go to state 11
    ROLESET         shift and go to state 12
    AGENTSET        shift and go to state 13
    AGENTATTRSET    shift and go to state 14
    ENVIRONMENT     shift and go to state 15
    VAR             shift and go to state 16
    NAME            shift and go to state 17
    PLUS            shift and go to state 19

    program                        shift and go to state 1
    headers                        shift and go to state 2
    header                         shift and go to state 3
    agent_model                    shift and go to state 4
    role_set                       shift and go to state 5
    agent_set                      shift and go to state 6
    agent_attr_set                 shift and go to state 7
    environment_def                shift and go to state 8
    assign                         shift and go to state 9
    increment                      shift and go to state 18

state 1

    (0) S' -> program .



state 2

    (1) program -> headers . b_bodies
    (2) program -> headers .
    (23) b_bodies -> . b_bodies b_body
    (24) b_bodies -> . b_body
    (25) b_body -> . behaviour_def
    (26) b_body -> . function_def
    (27) behaviour_def -> . BEHAVIOUR NAME BEGIN with_list END
    (28) function_def -> . FUNCTION NAME LPAREN names_list RPAREN BEGIN statements END
    (29) function_def -> . FUNCTION LPAREN names_list RPAREN BEGIN statements END

    $end            reduce using rule 2 (program -> headers .)
    BEHAVIOUR       shift and go to state 24
    FUNCTION        shift and go to state 25

    b_bodies                       shift and go to state 20
    b_body                         shift and go to state 21
    behaviour_def                  shift and go to state 22
    function_def                   shift and go to state 23

state 3

    (3) headers -> header .
    (4) headers -> header . headers
    (3) headers -> . header
    (4) headers -> . header headers
    (5) header -> . agent_model
    (6) header -> . role_set
    (7) header -> . agent_set
    (8) header -> . agent_attr_set
    (9) header -> . environment_def
    (10) header -> . assign SEMICOLON
    (11) header -> . IMPORT STRING SEMICOLON
    (12) agent_model -> . MODEL STRING SEMICOLON
    (13) role_set -> . ROLESET LPAREN role_set_statement RPAREN SEMICOLON
    (17) agent_set -> . AGENTSET LPAREN role_set_statement RPAREN SEMICOLON
    (18) agent_attr_set -> . AGENTATTRSET literal_list_set_statement SEMICOLON
    (19) environment_def -> . ENVIRONMENT LPAREN role_def RPAREN SEMICOLON
    (32) assign -> . VAR NAME EQUAL expr
    (33) assign -> . NAME EQUAL expr
    (34) assign -> . VAR NAME
    (35) assign -> . NAME DOT NAME EQUAL expr
    (36) assign -> . increment
    (68) increment -> . PLUS PLUS NAME
    (69) increment -> . NAME PLUS PLUS

    BEHAVIOUR       reduce using rule 3 (headers -> header .)
    FUNCTION        reduce using rule 3 (headers -> header .)
    $end            reduce using rule 3 (headers -> header .)
    IMPORT          shift and go to state 10
    MODEL           shift and go to state 11
    ROLESET         shift and go to state 12
    AGENTSET        shift and go to state 13
    AGENTATTRSET    shift and go to state 14
    ENVIRONMENT     shift and go to state 15
    VAR             shift and go to state 16
    NAME            shift and go to state 17
    PLUS            shift and go to state 19

    header                         shift and go to state 3
    headers                        shift and go to state 26
    agent_model                    shift and go to state 4
    role_set                       shift and go to state 5
    agent_set                      shift and go to state 6
    agent_attr_set                 shift and go to state 7
    environment_def                shift and go to state 8
    assign                         shift and go to state 9
    increment                      shift and go to state 18

state 4

    (5) header -> agent_model .

    IMPORT          reduce using rule 5 (header -> agent_model .)
    MODEL           reduce using rule 5 (header -> agent_model .)
    ROLESET         reduce using rule 5 (header -> agent_model .)
    AGENTSET        reduce using rule 5 (header -> agent_model .)
    AGENTATTRSET    reduce using rule 5 (header -> agent_model .)
    ENVIRONMENT     reduce using rule 5 (header -> agent_model .)
    VAR             reduce using rule 5 (header -> agent_model .)
    NAME            reduce using rule 5 (header -> agent_model .)
    PLUS            reduce using rule 5 (header -> agent_model .)
    BEHAVIOUR       reduce using rule 5 (header -> agent_model .)
    FUNCTION        reduce using rule 5 (header -> agent_model .)
    $end            reduce using rule 5 (header -> agent_model .)


state 5

    (6) header -> role_set .

    IMPORT          reduce using rule 6 (header -> role_set .)
    MODEL           reduce using rule 6 (header -> role_set .)
    ROLESET         reduce using rule 6 (header -> role_set .)
    AGENTSET        reduce using rule 6 (header -> role_set .)
    AGENTATTRSET    reduce using rule 6 (header -> role_set .)
    ENVIRONMENT     reduce using rule 6 (header -> role_set .)
    VAR             reduce using rule 6 (header -> role_set .)
    NAME            reduce using rule 6 (header -> role_set .)
    PLUS            reduce using rule 6 (header -> role_set .)
    BEHAVIOUR       reduce using rule 6 (header -> role_set .)
    FUNCTION        reduce using rule 6 (header -> role_set .)
    $end            reduce using rule 6 (header -> role_set .)


state 6

    (7) header -> agent_set .

    IMPORT          reduce using rule 7 (header -> agent_set .)
    MODEL           reduce using rule 7 (header -> agent_set .)
    ROLESET         reduce using rule 7 (header -> agent_set .)
    AGENTSET        reduce using rule 7 (header -> agent_set .)
    AGENTATTRSET    reduce using rule 7 (header -> agent_set .)
    ENVIRONMENT     reduce using rule 7 (header -> agent_set .)
    VAR             reduce using rule 7 (header -> agent_set .)
    NAME            reduce using rule 7 (header -> agent_set .)
    PLUS            reduce using rule 7 (header -> agent_set .)
    BEHAVIOUR       reduce using rule 7 (header -> agent_set .)
    FUNCTION        reduce using rule 7 (header -> agent_set .)
    $end            reduce using rule 7 (header -> agent_set .)


state 7

    (8) header -> agent_attr_set .

    IMPORT          reduce using rule 8 (header -> agent_attr_set .)
    MODEL           reduce using rule 8 (header -> agent_attr_set .)
    ROLESET         reduce using rule 8 (header -> agent_attr_set .)
    AGENTSET        reduce using rule 8 (header -> agent_attr_set .)
    AGENTATTRSET    reduce using rule 8 (header -> agent_attr_set .)
    ENVIRONMENT     reduce using rule 8 (header -> agent_attr_set .)
    VAR             reduce using rule 8 (header -> agent_attr_set .)
    NAME            reduce using rule 8 (header -> agent_attr_set .)
    PLUS            reduce using rule 8 (header -> agent_attr_set .)
    BEHAVIOUR       reduce using rule 8 (header -> agent_attr_set .)
    FUNCTION        reduce using rule 8 (header -> agent_attr_set .)
    $end            reduce using rule 8 (header -> agent_attr_set .)


state 8

    (9) header -> environment_def .

    IMPORT          reduce using rule 9 (header -> environment_def .)
    MODEL           reduce using rule 9 (header -> environment_def .)
    ROLESET         reduce using rule 9 (header -> environment_def .)
    AGENTSET        reduce using rule 9 (header -> environment_def .)
    AGENTATTRSET    reduce using rule 9 (header -> environment_def .)
    ENVIRONMENT     reduce using rule 9 (header -> environment_def .)
    VAR             reduce using rule 9 (header -> environment_def .)
    NAME            reduce using rule 9 (header -> environment_def .)
    PLUS            reduce using rule 9 (header -> environment_def .)
    BEHAVIOUR       reduce using rule 9 (header -> environment_def .)
    FUNCTION        reduce using rule 9 (header -> environment_def .)
    $end            reduce using rule 9 (header -> environment_def .)


state 9

    (10) header -> assign . SEMICOLON

    SEMICOLON       shift and go to state 27


state 10

    (11) header -> IMPORT . STRING SEMICOLON

    STRING          shift and go to state 28


state 11

    (12) agent_model -> MODEL . STRING SEMICOLON

    STRING          shift and go to state 29


state 12

    (13) role_set -> ROLESET . LPAREN role_set_statement RPAREN SEMICOLON

    LPAREN          shift and go to state 30


state 13

    (17) agent_set -> AGENTSET . LPAREN role_set_statement RPAREN SEMICOLON

    LPAREN          shift and go to state 31


state 14

    (18) agent_attr_set -> AGENTATTRSET . literal_list_set_statement SEMICOLON
    (20) literal_list_set_statement -> . LPAREN literal_list RPAREN

    LPAREN          shift and go to state 33

    literal_list_set_statement     shift and go to state 32

state 15

    (19) environment_def -> ENVIRONMENT . LPAREN role_def RPAREN SEMICOLON

    LPAREN          shift and go to state 34


state 16

    (32) assign -> VAR . NAME EQUAL expr
    (34) assign -> VAR . NAME

    NAME            shift and go to state 35


state 17

    (33) assign -> NAME . EQUAL expr
    (35) assign -> NAME . DOT NAME EQUAL expr
    (69) increment -> NAME . PLUS PLUS

    EQUAL           shift and go to state 36
    DOT             shift and go to state 37
    PLUS            shift and go to state 38


state 18

    (36) assign -> increment .

    SEMICOLON       reduce using rule 36 (assign -> increment .)
    RPAREN          reduce using rule 36 (assign -> increment .)


state 19

    (68) increment -> PLUS . PLUS NAME

    PLUS            shift and go to state 39


state 20

    (1) program -> headers b_bodies .
    (23) b_bodies -> b_bodies . b_body
    (25) b_body -> . behaviour_def
    (26) b_body -> . function_def
    (27) behaviour_def -> . BEHAVIOUR NAME BEGIN with_list END
    (28) function_def -> . FUNCTION NAME LPAREN names_list RPAREN BEGIN statements END
    (29) function_def -> . FUNCTION LPAREN names_list RPAREN BEGIN statements END

    $end            reduce using rule 1 (program -> headers b_bodies .)
    BEHAVIOUR       shift and go to state 24
    FUNCTION        shift and go to state 25

    b_body                         shift and go to state 40
    behaviour_def                  shift and go to state 22
    function_def                   shift and go to state 23

state 21

    (24) b_bodies -> b_body .

    BEHAVIOUR       reduce using rule 24 (b_bodies -> b_body .)
    FUNCTION        reduce using rule 24 (b_bodies -> b_body .)
    $end            reduce using rule 24 (b_bodies -> b_body .)


state 22

    (25) b_body -> behaviour_def .

    BEHAVIOUR       reduce using rule 25 (b_body -> behaviour_def .)
    FUNCTION        reduce using rule 25 (b_body -> behaviour_def .)
    $end            reduce using rule 25 (b_body -> behaviour_def .)


state 23

    (26) b_body -> function_def .

    BEHAVIOUR       reduce using rule 26 (b_body -> function_def .)
    FUNCTION        reduce using rule 26 (b_body -> function_def .)
    $end            reduce using rule 26 (b_body -> function_def .)


state 24

    (27) behaviour_def -> BEHAVIOUR . NAME BEGIN with_list END

    NAME            shift and go to state 41


state 25

    (28) function_def -> FUNCTION . NAME LPAREN names_list RPAREN BEGIN statements END
    (29) function_def -> FUNCTION . LPAREN names_list RPAREN BEGIN statements END

    NAME            shift and go to state 42
    LPAREN          shift and go to state 43


state 26

    (4) headers -> header headers .

    BEHAVIOUR       reduce using rule 4 (headers -> header headers .)
    FUNCTION        reduce using rule 4 (headers -> header headers .)
    $end            reduce using rule 4 (headers -> header headers .)


state 27

    (10) header -> assign SEMICOLON .

    IMPORT          reduce using rule 10 (header -> assign SEMICOLON .)
    MODEL           reduce using rule 10 (header -> assign SEMICOLON .)
    ROLESET         reduce using rule 10 (header -> assign SEMICOLON .)
    AGENTSET        reduce using rule 10 (header -> assign SEMICOLON .)
    AGENTATTRSET    reduce using rule 10 (header -> assign SEMICOLON .)
    ENVIRONMENT     reduce using rule 10 (header -> assign SEMICOLON .)
    VAR             reduce using rule 10 (header -> assign SEMICOLON .)
    NAME            reduce using rule 10 (header -> assign SEMICOLON .)
    PLUS            reduce using rule 10 (header -> assign SEMICOLON .)
    BEHAVIOUR       reduce using rule 10 (header -> assign SEMICOLON .)
    FUNCTION        reduce using rule 10 (header -> assign SEMICOLON .)
    $end            reduce using rule 10 (header -> assign SEMICOLON .)


state 28

    (11) header -> IMPORT STRING . SEMICOLON

    SEMICOLON       shift and go to state 44


state 29

    (12) agent_model -> MODEL STRING . SEMICOLON

    SEMICOLON       shift and go to state 45


state 30

    (13) role_set -> ROLESET LPAREN . role_set_statement RPAREN SEMICOLON
    (14) role_set_statement -> . role_set_statement COMMA role_def
    (15) role_set_statement -> . role_def
    (16) role_def -> . BEGIN nameval_pairs END

    BEGIN           shift and go to state 48

    role_set_statement             shift and go to state 46
    role_def                       shift and go to state 47

state 31

    (17) agent_set -> AGENTSET LPAREN . role_set_statement RPAREN SEMICOLON
    (14) role_set_statement -> . role_set_statement COMMA role_def
    (15) role_set_statement -> . role_def
    (16) role_def -> . BEGIN nameval_pairs END

    BEGIN           shift and go to state 48

    role_set_statement             shift and go to state 49
    role_def                       shift and go to state 47

state 32

    (18) agent_attr_set -> AGENTATTRSET literal_list_set_statement . SEMICOLON

    SEMICOLON       shift and go to state 50


state 33

    (20) literal_list_set_statement -> LPAREN . literal_list RPAREN
    (21) literal_list -> . NAME COMMA literal_list
    (22) literal_list -> . NAME

    NAME            shift and go to state 52

    literal_list                   shift and go to state 51

state 34

    (19) environment_def -> ENVIRONMENT LPAREN . role_def RPAREN SEMICOLON
    (16) role_def -> . BEGIN nameval_pairs END

    BEGIN           shift and go to state 48

    role_def                       shift and go to state 53

state 35

    (32) assign -> VAR NAME . EQUAL expr
    (34) assign -> VAR NAME .

    EQUAL           shift and go to state 54
    SEMICOLON       reduce using rule 34 (assign -> VAR NAME .)
    RPAREN          reduce using rule 34 (assign -> VAR NAME .)


state 36

    (33) assign -> NAME EQUAL . expr
    (70) expr -> . INSTANCE NAME
    (71) expr -> . MINUS expr
    (72) expr -> . expr PLUS expr
    (73) expr -> . expr MINUS expr
    (74) expr -> . expr TIMES expr
    (75) expr -> . expr DIVIDE expr
    (76) expr -> . expr EEQUAL expr
    (77) expr -> . expr NEQUAL expr
    (78) expr -> . expr LT expr
    (79) expr -> . expr GT expr
    (80) expr -> . LPAREN expr RPAREN
    (81) expr -> . SET list_set_statement
    (82) expr -> . LIST list_set_statement
    (87) expr -> . BEGIN nameval_pairs END
    (91) expr -> . PYTHONLINK STRING
    (92) expr -> . NAME DOT with_set
    (93) expr -> . NAME DOT NAME
    (94) expr -> . NAME list_set_statement
    (95) expr -> . NAME DOT NAME list_set_statement
    (96) expr -> . with_set
    (97) expr -> . NAME SUBL expr SUBR
    (98) expr -> . NAME
    (99) expr -> . NUMBER
    (100) expr -> . STRING
    (101) expr -> . function_def
    (102) expr -> . nONE
    (103) expr -> . NONE
    (104) expr -> . nULL
    (105) expr -> . NULL
    (106) expr -> . TRUE
    (107) expr -> . FALSE
    (41) with_set -> . with_set DOT with_set
    (42) with_set -> . ALL
    (43) with_set -> . ONE
    (44) with_set -> . ROLES LPAREN string_list RPAREN
    (45) with_set -> . BUT LPAREN expr RPAREN
    (46) with_set -> . MINIMUM LPAREN function_def RPAREN
    (47) with_set -> . FILTER LPAREN function_def RPAREN
    (28) function_def -> . FUNCTION NAME LPAREN names_list RPAREN BEGIN statements END
    (29) function_def -> . FUNCTION LPAREN names_list RPAREN BEGIN statements END

    INSTANCE        shift and go to state 57
    MINUS           shift and go to state 58
    LPAREN          shift and go to state 59
    SET             shift and go to state 60
    LIST            shift and go to state 61
    BEGIN           shift and go to state 62
    PYTHONLINK      shift and go to state 63
    NAME            shift and go to state 55
    NUMBER          shift and go to state 66
    STRING          shift and go to state 64
    nONE            shift and go to state 68
    NONE            shift and go to state 69
    nULL            shift and go to state 70
    NULL            shift and go to state 71
    TRUE            shift and go to state 72
    FALSE           shift and go to state 73
    ALL             shift and go to state 74
    ONE             shift and go to state 75
    ROLES           shift and go to state 76
    BUT             shift and go to state 77
    MINIMUM         shift and go to state 78
    FILTER          shift and go to state 79
    FUNCTION        shift and go to state 25

    expr                           shift and go to state 56
    with_set                       shift and go to state 65
    function_def                   shift and go to state 67

state 37

    (35) assign -> NAME DOT . NAME EQUAL expr

    NAME            shift and go to state 80


state 38

    (69) increment -> NAME PLUS . PLUS

    PLUS            shift and go to state 81


state 39

    (68) increment -> PLUS PLUS . NAME

    NAME            shift and go to state 82


state 40

    (23) b_bodies -> b_bodies b_body .

    BEHAVIOUR       reduce using rule 23 (b_bodies -> b_bodies b_body .)
    FUNCTION        reduce using rule 23 (b_bodies -> b_bodies b_body .)
    $end            reduce using rule 23 (b_bodies -> b_bodies b_body .)


state 41

    (27) behaviour_def -> BEHAVIOUR NAME . BEGIN with_list END

    BEGIN           shift and go to state 83


state 42

    (28) function_def -> FUNCTION NAME . LPAREN names_list RPAREN BEGIN statements END

    LPAREN          shift and go to state 84


state 43

    (29) function_def -> FUNCTION LPAREN . names_list RPAREN BEGIN statements END
    (30) names_list -> . NAME COMMA names_list
    (31) names_list -> . NAME

    NAME            shift and go to state 86

    names_list                     shift and go to state 85

state 44

    (11) header -> IMPORT STRING SEMICOLON .

    IMPORT          reduce using rule 11 (header -> IMPORT STRING SEMICOLON .)
    MODEL           reduce using rule 11 (header -> IMPORT STRING SEMICOLON .)
    ROLESET         reduce using rule 11 (header -> IMPORT STRING SEMICOLON .)
    AGENTSET        reduce using rule 11 (header -> IMPORT STRING SEMICOLON .)
    AGENTATTRSET    reduce using rule 11 (header -> IMPORT STRING SEMICOLON .)
    ENVIRONMENT     reduce using rule 11 (header -> IMPORT STRING SEMICOLON .)
    VAR             reduce using rule 11 (header -> IMPORT STRING SEMICOLON .)
    NAME            reduce using rule 11 (header -> IMPORT STRING SEMICOLON .)
    PLUS            reduce using rule 11 (header -> IMPORT STRING SEMICOLON .)
    BEHAVIOUR       reduce using rule 11 (header -> IMPORT STRING SEMICOLON .)
    FUNCTION        reduce using rule 11 (header -> IMPORT STRING SEMICOLON .)
    $end            reduce using rule 11 (header -> IMPORT STRING SEMICOLON .)


state 45

    (12) agent_model -> MODEL STRING SEMICOLON .

    IMPORT          reduce using rule 12 (agent_model -> MODEL STRING SEMICOLON .)
    MODEL           reduce using rule 12 (agent_model -> MODEL STRING SEMICOLON .)
    ROLESET         reduce using rule 12 (agent_model -> MODEL STRING SEMICOLON .)
    AGENTSET        reduce using rule 12 (agent_model -> MODEL STRING SEMICOLON .)
    AGENTATTRSET    reduce using rule 12 (agent_model -> MODEL STRING SEMICOLON .)
    ENVIRONMENT     reduce using rule 12 (agent_model -> MODEL STRING SEMICOLON .)
    VAR             reduce using rule 12 (agent_model -> MODEL STRING SEMICOLON .)
    NAME            reduce using rule 12 (agent_model -> MODEL STRING SEMICOLON .)
    PLUS            reduce using rule 12 (agent_model -> MODEL STRING SEMICOLON .)
    BEHAVIOUR       reduce using rule 12 (agent_model -> MODEL STRING SEMICOLON .)
    FUNCTION        reduce using rule 12 (agent_model -> MODEL STRING SEMICOLON .)
    $end            reduce using rule 12 (agent_model -> MODEL STRING SEMICOLON .)


state 46

    (13) role_set -> ROLESET LPAREN role_set_statement . RPAREN SEMICOLON
    (14) role_set_statement -> role_set_statement . COMMA role_def

    RPAREN          shift and go to state 87
    COMMA           shift and go to state 88


state 47

    (15) role_set_statement -> role_def .

    RPAREN          reduce using rule 15 (role_set_statement -> role_def .)
    COMMA           reduce using rule 15 (role_set_statement -> role_def .)


state 48

    (16) role_def -> BEGIN . nameval_pairs END
    (88) nameval_pairs -> . nameval_pairs COMMA nameval_pair
    (89) nameval_pairs -> . nameval_pair
    (90) nameval_pair -> . NAME COLON expr

    NAME            shift and go to state 91

    nameval_pairs                  shift and go to state 89
    nameval_pair                   shift and go to state 90

state 49

    (17) agent_set -> AGENTSET LPAREN role_set_statement . RPAREN SEMICOLON
    (14) role_set_statement -> role_set_statement . COMMA role_def

    RPAREN          shift and go to state 92
    COMMA           shift and go to state 88


state 50

    (18) agent_attr_set -> AGENTATTRSET literal_list_set_statement SEMICOLON .

    IMPORT          reduce using rule 18 (agent_attr_set -> AGENTATTRSET literal_list_set_statement SEMICOLON .)
    MODEL           reduce using rule 18 (agent_attr_set -> AGENTATTRSET literal_list_set_statement SEMICOLON .)
    ROLESET         reduce using rule 18 (agent_attr_set -> AGENTATTRSET literal_list_set_statement SEMICOLON .)
    AGENTSET        reduce using rule 18 (agent_attr_set -> AGENTATTRSET literal_list_set_statement SEMICOLON .)
    AGENTATTRSET    reduce using rule 18 (agent_attr_set -> AGENTATTRSET literal_list_set_statement SEMICOLON .)
    ENVIRONMENT     reduce using rule 18 (agent_attr_set -> AGENTATTRSET literal_list_set_statement SEMICOLON .)
    VAR             reduce using rule 18 (agent_attr_set -> AGENTATTRSET literal_list_set_statement SEMICOLON .)
    NAME            reduce using rule 18 (agent_attr_set -> AGENTATTRSET literal_list_set_statement SEMICOLON .)
    PLUS            reduce using rule 18 (agent_attr_set -> AGENTATTRSET literal_list_set_statement SEMICOLON .)
    BEHAVIOUR       reduce using rule 18 (agent_attr_set -> AGENTATTRSET literal_list_set_statement SEMICOLON .)
    FUNCTION        reduce using rule 18 (agent_attr_set -> AGENTATTRSET literal_list_set_statement SEMICOLON .)
    $end            reduce using rule 18 (agent_attr_set -> AGENTATTRSET literal_list_set_statement SEMICOLON .)


state 51

    (20) literal_list_set_statement -> LPAREN literal_list . RPAREN

    RPAREN          shift and go to state 93


state 52

    (21) literal_list -> NAME . COMMA literal_list
    (22) literal_list -> NAME .

    COMMA           shift and go to state 94
    RPAREN          reduce using rule 22 (literal_list -> NAME .)


state 53

    (19) environment_def -> ENVIRONMENT LPAREN role_def . RPAREN SEMICOLON

    RPAREN          shift and go to state 95


state 54
